--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,88 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<style type="text/css">
+table {
+ border-collapse: collapse;
+ font-family: Futura, Arial, sans-serif;
+}
+caption {
+ font-size: larger;
+ margin: 1em auto;
+}
+th,td {
+ padding: .65em;
+}
+th {
+ background: rgb(63, 62, 62) nonerepeat scroll 0 0;
+ border: 1px solid #777;
+ color: rgb(51, 51, 50);
+}
+td {
+ border: 1px solid#777;
+}
+tbody tr:nth-child(odd) {
+ background: rgb(250, 115, 5);
+}
 
+/*3. 圆角表格*/
+/* th:first-child {
+  border-radius: 9px 0 0 0;
+}
 
-<%= helloWorld %>
+th:last-child {
+ border-radius: 0 9px 0 0;
+}
+
+tr:last-child td:first-child {
+ border-radius: 0 0 0 9px;
+}
+
+tr:last-child td:last-child {
+ border-radius: 0 0 9px 0;
+} */
+
+/*5. 表格行上的立体悬停效果*/
+tbody tr:hover {
+ background: linear-gradient(#fff,#aaa);
+ font-size: 17px;
+}
+
+</style>
+</head>
+<body>
+        <%= helloWorld %>
+	<table>
+		<caption>American Film Institute’s Top Five Films</caption>
+		<thead>
+			<tr>
+				<th>Position
+				<th>Movie
+				<th>Year of Release
+		</thead>
+		<tbody>
+			<tr>
+				<td>1
+				<td>Citizen Kane
+				<td>1941
+			<tr>
+				<td>2
+				<td>The Godfather
+				<td>1972
+			<tr>
+				<td>3
+				<td>Casablanca
+				<td>1942
+			<tr>
+				<td>4
+				<td>Raging Bull
+				<td>1980
+			<tr>
+				<td>5
+				<td>Singin’ In The Rain
+				<td>1952
+		</tbody>
+	</table>
+</body>
+</html>
